fixed spacing bw course cards

--- a/src/Components/CoursePage/WeekDescCard.css
+++ b/src/Components/CoursePage/WeekDescCard.css
@@ -3,7 +3,7 @@
   /* margin-right: 10px; */
   border-radius: 12px;
   box-sizing: border-box;
-  width: 359px;
+  width: 410px;
   background: rgba(40, 40, 40, 0.05);
   box-shadow: 12px 4px 160px rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(40px);
